tests/baselines/reference/recursiveBaseCheck3.errors.txt
==== tests/cases/compiler/recursiveBaseCheck3.ts (2 errors) ====
    class A<T> extends C<T> { }
          ~
!!! recursiveBaseCheck3.ts(1,7): error TS2100: Type 'A<T>' recursively references itself as a base type.
    class C<T> extends A<T> { }
    
    (new C).blah;
            ~~~~
!!! recursiveBaseCheck3.ts(4,9): error TS2094: Property 'blah' does not exist on value of type 'C<{}>'.